# watsonx_rust_cli

./: README.md
api_macro/: Cargo.toml
api_macro/api_macro_derive/: Cargo.toml
api_macro/api_macro_derive/src/: lib.rs
api_macro/src/: lib.rs
cli/: Cargo.toml
cli/src/: deployment.rs  main.rs
