[package]
name = "watsonx_rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
api_macro = { path = "../api_macro" }
api_macro_derive = { path = "../api_macro/api_macro_derive" }
serde = { version = "1.0", features = ["derive"] }
